; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_skip_single_pick.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_skip_single_pick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"cannot resolve HEAD\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @skip_single_pick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skip_single_pick() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.object_id, align 4
  %3 = call i64 @read_ref_full(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 0, %struct.object_id* %2, i32* null)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 @_(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @error(i32 %6)
  store i32 %7, i32* %1, align 4
  br label %10

8:                                                ; preds = %0
  %9 = call i32 @reset_merge(%struct.object_id* %2)
  store i32 %9, i32* %1, align 4
  br label %10

10:                                               ; preds = %8, %5
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i64 @read_ref_full(i8*, i32, %struct.object_id*, i32*) #1

declare dso_local i32 @error(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @reset_merge(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
